test/library/packages/Futures/futures-error-void.good
futures-error-void.chpl:3: error: async() task function (expecting arguments) provided without arguments
